src/objects/Enphase_Pull_Log__c.object
<CustomObject>
    <description>Stores audit of production data pulled from enphase on a monthly basis.</description>
    <fields>
        <fullName>Apr_Prod__c</fullName>
        <label>April Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_Prod__c</fullName>
        <label>August Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Date__c</fullName>
        <description>Date the back was run</description>
        <label>Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Prod__c</fullName>
        <label>December Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Prod__c</fullName>
        <label>February Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installed_System__c</fullName>
        <label>Installed System</label>
        <referenceTo>Installed_System__c</referenceTo>
        <relationshipLabel>Enphase Pull Logs</relationshipLabel>
        <relationshipName>Enphase_Pull_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Jan_Prod__c</fullName>
        <label>January Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Prod__c</fullName>
        <label>July Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Prod__c</fullName>
        <label>June Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar_Prod__c</fullName>
        <label>March Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Prod__c</fullName>
        <label>May Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Prod__c</fullName>
        <label>November Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_Prod__c</fullName>
        <label>October Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_Prod__c</fullName>
        <label>September Production (Wh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_of_Year__c</fullName>
        <description>Start of the production year</description>
        <label>Start of Year</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(Start_of_Year__c))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Enphase Pull Log</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Pull ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enphase Pull Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>